i hate fixing spacing

--- a/2898/newdesign/css/style.css
+++ b/2898/newdesign/css/style.css
@@ -979,8 +979,9 @@
 /* Banner */
 
 	#banner {
+		background-image: url("img/slideshow/pic1.jpg");
 		background-color: #666666;
-		background-size: cover;
+		background-size: contain;
 		background-position: center center;
 		background-repeat: no-repeat;
 		color: #d8d8d8;
